Fixed some figure identifiers.

--- a/index.html
+++ b/index.html
@@ -693,13 +693,13 @@
         <h4>Emphasis Within Prose</h4>
         <!-- p>Within a paragraph, a reference to a book title, or section title is given in italic. Words may also be emboldened to emphasize importance.</p -->
         <p> Italic applied to Ethiopic has been experiment with since the arrival of desktop publishing. Earlier in the 20th century, a typeface change to a pre-20th century style would be applied in place of italic. Underlined text was introduced to Ethiopic publishing in the earlier 20th century and was well established by mid-century. It is not uncommon to find the underline “Ethiopicized” whereby the weight is made heavier to correspond with the greater weight of Ethiopic letters relative to Western weights.</p>
-        <figure id="ethiopicized_underline"> <img src="images/heavy-underline-example.png" alt=" " />
+        <figure id="mekonnen_zewdie_yemaychew_qwulegna_page_56"> <img src="images/heavy-underline-example.png" alt=" " />
           <figcaption>Heavier underline weight found in <cite>YeMaychew Qwuslegna</cite> by Mekonnen Zewdie.</figcaption>
         </figure>
-        <figure id="emphasis_typeface_change"> <img src="images/kwk-mashafa-sawasew-page-268-typeface-change-for-emphasis.jpg" alt=" " />
+        <figure id="kwk_metsehafe_sewasew_page_268"> <img src="images/kwk-mashafa-sawasew-page-268-typeface-change-for-emphasis.jpg" alt=" " />
           <figcaption>Typeface change for emphasis found in <cite>Maṣḥafa Sawāsew Wages Wamazgaba Qālāt Hadis</cite> by Kidane Wolde Kifle.</figcaption>
         </figure>
-        <figure id="emphasis_font_size_change"> <img src="images/kwk-mezgebe-fidel-page-43-font-size-increase-for-emphasis.png" alt=" " />
+        <figure id="kwk_mezgebe_fidel_page_43"> <img src="images/kwk-mezgebe-fidel-page-43-font-size-increase-for-emphasis.png" alt=" " />
           <figcaption>Typeface size change for emphasis found in <cite>Mezgebe Fidel</cite> by Kidane Wolde Kifle.</figcaption>
         </figure>
         <div class="issues">
@@ -1628,8 +1628,8 @@
       <p>The layout and formatting of page and section numbering in Ethiopic practices does not demonstrate a marked difference from Western conventions. 
          Most often the page number itself will appear in the center footer position or in the outer header section, but may appear in any standard position.
          Page counting differences do need to be considered.</p>
-      <figure id="page_numbering_in_two_systems"> <img src="images/page-number-in-two-systems.png" alt=" "/>
-        <figcaption>Page numbering in two systems from Metsehafe Chewata Sigawi-Zeneb Ethiopia.</figcaption>
+      <figure id="zeneb_ethiopia_metsehafe_chewata_sigawi_page_39"> <img src="images/page-number-in-two-systems.png" alt=" "/>
+        <figcaption>Page numbering in two systems from Metsehafe Chewata Sigawi by Zeneb Ethiopia.</figcaption>
       </figure>
       <p>In Ethiopic book publishing, the first numbered page will generally be seen on the <span lang="am">መቅድም</span> section. When a <span lang="am">መቅድም</span> is not present,
          numbering is expected to begin at the <span lang="am">መግቢያ</span>. The prevailing Modern Ethiopic practice is to begin counting pages from the inner cover page (this
