Changed terminology to "rubricated" when discussing red emphasis.

--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
 
     <section id="h_emphasis">
       <h3>Emphasis</h3>
-      <p>Classical Ethiopic writing does not feature a letter shape stylistic change to communicate word emphasis. In religious works, the color red will be used to emphasize a spiritual aspect of a word in a passage.  </p>
+      <p>Classical Ethiopic writing does not feature a letter shape stylistic change to communicate word emphasis. In religious works, the color red will be used to emphasize a spiritual aspect of a word in a passage (i.e. “rubricate”).</p>
       <p>Emphasis in modern Ethiopic writing will employ every emphasis device available from the available publishing technology (e.g. underline, slant, embolden, letter size, letter outline, background shapes, etc.). The practice however is idiosyncratic and inconsistently applied leading to debate and disagreement within the publishing community.</p>
       <p>The following subsections present a proposed best practice of the authors.</p>
       <section id="emphasis_within_prose">
@@ -732,7 +732,7 @@
 
       <section id="ecclesiastical_emphasis">
         <h4>Ecclesiastical Emphasis</h4>
-        <p>In religous literature, certain words or phrases with a spiritual or more holy aspect may be colored in red.  The practice is context dependent and a word that will appear in red in one sentence may not be red in the next (or elsewhere in the same sentence).</p>
+        <p>In religous literature, certain words or phrases with a spiritual or more holy aspect may be rubricated (inked in red).  The practice is context dependent and a word rubricated in one sentence may not be in the next (or elsewhere in the same sentence).</p>
         <figure id="ecclesiastical_emphasis_sample"> <img src="images/ecclesiastical-emphasis-sample-cropped.jpg" alt=" " width="600"/>
           <figcaption>Ecclesiastical emphasis sample from Maṣḥafa Ṣalot Mes Ser’ate Kiddase Betegreññā, Page 32 (Weldemariam, 1995 (1988 EC))</figcaption>
         </figure>
