First pass at figure cross references, newer figures need to get into reference section.

--- a/index.html
+++ b/index.html
@@ -2121,13 +2121,15 @@
       <dd> <cite> <a href="https://books.google.com/books?id=j10VAAAAQAAJ&pg=PT237">Historia Aethiopica, sive brevis et succincta descriptio regni Habessinorum</a> </cite> H. Ludolf.  L.III.c.5 Paragraph 35.  Frankfurt: prostat apud Joh. David Zunne. 1681 </dd>
       <dt>Erikson, 1921</dt>
       <dd>
+        <p><a href="#justification_word_bound"></a></p>
         <p><em>Transcribed Citation:</em><br/>
-        <span style="margin-left:2em;"> <cite>Yeografi LeEthiopia Lijoch Tiqim</cite>, O. Erikson. Page 35. Swedish Mission, 1921 (1913 EC). Asmara.</span></p>
+        <span style="margin-left:2em;"> <cite>YeOgrafi LeEthiopia Lijoch Tiqim</cite>, O. Erikson. Page 35. Swedish Mission, 1921 (1913 EC). Asmara.</span></p>
         <p><em>Source Citation:</em><br/>
         <span style="margin-left:2em;" lang="am"> <cite>የኦግራፊ። ለኢትዮጵያ፡ልጆች፡ጥቅም</cite>፣ ኤሪክሶን። ገጽ ፴፭። የሚስዮንግ፡ስዌዱኣማህተም፡ታተመች፣ ፲፱፻፲፫። አስመራ።</span></p>
       </dd>
       <dt>Gubenya, 1973</dt>
       <dd>
+        <p><a href="#fig_justification_centered"></a></p>
         <p><em>Transcribed Citation:</em><br/>
         <span style="margin-left:2em;"> <cite>Alweledem</cite>, A. Gubenya. Page 87. Brana Publisher,  1973 (1966 EC). Addis Ababa.</span></p>
         <p><em>Source Citation:</em><br/>
@@ -2135,6 +2137,7 @@
       </dd>
       <dt>Itedalewe, 1987</dt>
       <dd>
+        <p><a href="#nebiy_mohammed_page_35"></a></p>
         <p><em>Transcribed Citation:</em><br/>
         <span style="margin-left:2em;"> <cite>Ḥaṣir Tarix Nebiy Muḥamed</cite>, J.H.A. Itedalewe. Page 35. Selam Printing House, 1987 (1979 EC). Asmara.</span></p>
         <p><em>Source Citation:</em><br/>
@@ -2142,6 +2145,9 @@
       </dd>
       <dt>Kifle, 1955</dt>
       <dd>
+        <p><a href="#kwk_metsehafe_sewasew_page_65_inner_parenthesis"></a></p>
+        <p><a href="#kwk_metsehafe_sewasew_page_159"></a></p>
+        <p><a href="#kwk_metsehafe_sewasew_page_65"></a></p>
         <p><em>Transcribed Citation:</em><br/>
         <span style="margin-left:2em;"> <cite>Maṣḥafa Sawāsew Wages Wamazgaba Qālāt Hadis</cite>, K. W. Kifle. Pages 65 &amp; 159. Artistic Printers, 1955 (1948 EC). Addis Ababa.</span></p>
         <p><em>Source Citation:</em><br/>
@@ -2149,6 +2155,7 @@
       </dd>
       <dt>Weldemariam, 1995</dt>
       <dd>
+        <p><a href="#ecclesiastical_emphasis_sample"></a></p>
         <p><em>Transcribed Citation:</em><br/>
         <span style="margin-left:2em;"> <cite>Maṣḥafa Ṣalot Mes Ser’ate Kiddase Betegreññā</cite>, B. Weldemariam. Page 32. Mahbere Haawaryat F-Ha Bet Mahtem Tehatmet, 1995 (1988 EC). Asmera.</span></p>
         <p><em>Source Citation:</em><br/>
