Added cross reference for Ludolf image.

--- a/index.html
+++ b/index.html
@@ -2118,7 +2118,10 @@
     <p><em>[TBD: Correlate the image references with Figure numbers]</em></p>
     <dl class="ref">
       <dt>Ludolf, 1681</dt>
-      <dd> <cite> <a href="https://books.google.com/books?id=j10VAAAAQAAJ&pg=PT237">Historia Aethiopica, sive brevis et succincta descriptio regni Habessinorum</a> </cite> H. Ludolf.  L.III.c.5 Paragraph 35.  Frankfurt: prostat apud Joh. David Zunne. 1681 </dd>
+      <dd>
+        <p><a href="#justification_in_historia_aethiopica"></a></p>
+        <p><cite><a href="https://books.google.com/books?id=j10VAAAAQAAJ&pg=PT237">Historia Aethiopica, sive brevis et succincta descriptio regni Habessinorum</a></cite> H. Ludolf. L.III.c.5 Paragraph 35.  Frankfurt: prostat apud Joh. David Zunne. 1681</p>
+      </dd>
       <dt>Erikson, 1921</dt>
       <dd>
         <p><a href="#justification_word_bound"></a></p>
