Completed figure cross referencing.

--- a/index.html
+++ b/index.html
@@ -734,7 +734,7 @@
         <h4>Ecclesiastical Emphasis</h4>
         <p>In religous literature, certain words or phrases with a spiritual or more holy aspect may be rubricated (inked in red).  The practice is context dependent and a word rubricated in one sentence may not be in the next (or elsewhere in the same sentence).</p>
         <figure id="ecclesiastical_emphasis_sample"> <img src="images/ecclesiastical-emphasis-sample-cropped.jpg" alt=" " width="600"/>
-          <figcaption>Ecclesiastical emphasis sample from Maṣḥafa Ṣalot Mes Ser’ate Kiddase Betegreññā, Page 32 (Weldemariam, 1995 (1988 EC))</figcaption>
+          <figcaption>Ecclesiastical emphasis sample from Maṣḥafa Ṣalot Mes Ser’ate Kiddase Betegreññā, Page 32 (Woldemariam, 1995 (1988 EC))</figcaption>
         </figure>
         <div class="issues">
           <p>Issues/Questions:</p>
@@ -2089,33 +2089,33 @@
     <h1>References</h1>
     <dl class="ref">
       <dt>Pankhurst, 1998</dt>
-      <dd> <cite> 
-      <!-- use this alternative link until the Addis Tribute archive is restored --> 
-      <a href="http://web.linkethiopia.org/guide-to-ethiopia/the-pankhurst-history-library/geez-literature-church-libraries-and-the-coming-from-europe-of-the-printed-word/">Ge’ez Literature, Church Libraries, and the Coming, from Europe, of the Printed Word. </a> </cite> R. Pankhurst. Addis Tribune, August 28, 1998. Addis Ababa. </dd>
+      <dd>
+        <!-- use this alternative link until the Addis Tribute archive is restored --> 
+        <p><cite><a href="http://web.linkethiopia.org/guide-to-ethiopia/the-pankhurst-history-library/geez-literature-church-libraries-and-the-coming-from-europe-of-the-printed-word/">Ge’ez Literature, Church Libraries, and the Coming, from Europe, of the Printed Word.</a></cite> R. Pankhurst. Addis Tribune, August 28, 1998. Addis Ababa.</p></dd>
       <dt>Alemayehu, 1965</dt>
       <dd>
         <p><em>Transcribed Citation:</em><br/>
-        <span style="margin-left:2em;"> <cite>Fəqər əskä Mäqabər</cite>, H. Alemayehu. Berhanenna Selam Printing Enterprise, 1965. Addis Ababa.</span></p>
+        <span style="margin-left:2em;"><cite>Fəqər əskä Mäqabər</cite>, H. Alemayehu. Berhanenna Selam Printing Enterprise, 1965. Addis Ababa.</span></p>
         <p><em>Source Citation:</em><br/>
-        <span style="margin-left:2em;" lang="am"> <cite>ፍቅር፡እስከ፡መቃብር</cite>፣ ሀዲስ አለማየሁ። ብርሃንና ሰላም ማተሚያ ድርጀት፣ ፲፱፻፶፰። አዲስ አበባ።</span></p>
+        <span style="margin-left:2em;" lang="am"><cite>ፍቅር፡እስከ፡መቃብር</cite>፣ ሀዲስ አለማየሁ። ብርሃንና ሰላም ማተሚያ ድርጀት፣ ፲፱፻፶፰። አዲስ አበባ።</span></p>
       </dd>
       <dt>Gebre, 2004</dt>
       <dd>
         <p><em>Transcribed Citation:</em><br/>
-        <span style="margin-left:2em;"> <cite>Tegbarawi Yetsihifet Memariya</cite>, D. Gebre. Commercial Printing Enterprises, 2004. Addis Ababa.</span></p>
+        <span style="margin-left:2em;"><cite>Tegbarawi Yetsihifet Memariya</cite>, D. Gebre. Commercial Printing Enterprises, 2004. Addis Ababa.</span></p>
         <p><em>Source Citation:</em><br/>
-        <span style="margin-left:2em;" lang="am"> <cite>ተግባራዊ፡የጽህፈት፡መማሪያ</cite>፣ ደረጀ ገብሬ። ንግድ ማተሚያ ድርጅት፣ ሚያዝያ 1996። አዲስ አበባ።</span></p>
+        <span style="margin-left:2em;" lang="am"><cite>ተግባራዊ፡የጽህፈት፡መማሪያ</cite>፣ ደረጀ ገብሬ። ንግድ ማተሚያ ድርጅት፣ ሚያዝያ 1996። አዲስ አበባ።</span></p>
       </dd>
       <dt>Shewaye, 1993</dt>
       <dd>
         <p><em>Transcribed Citation:</em><br/>
-        <span style="margin-left:2em;"> <cite>Anbebo YemMredatina YeMeSaf Chilotan Madaber</cite>, T. Shewaye. Educational Materials Publishing and Distribution Agency, 1993. Addis Ababa.</span></p>
+        <span style="margin-left:2em;"><cite>Anbebo YemMredatina YeMeSaf Chilotan Madaber</cite>, T. Shewaye. Educational Materials Publishing and Distribution Agency, 1993. Addis Ababa.</span></p>
         <p><em>Source Citation:</em><br/>
-        <span style="margin-left:2em;" lang="am"> <cite>አንብቦ የመረዳትና የመጻፍ ችሎታን ማዳበር </cite>፣ ተስፋዬ ሸዋዬ። ት.መ.ማ.ማ.ድ.፣ 1986። አዲስ አበባ።</span></p>
+        <span style="margin-left:2em;" lang="am"><cite>አንብቦ የመረዳትና የመጻፍ ችሎታን ማዳበር </cite>፣ ተስፋዬ ሸዋዬ። ት.መ.ማ.ማ.ድ.፣ 1986። አዲስ አበባ።</span></p>
       </dd>
     </dl>
     <h2>Full Image References</h2>
-    <p><em>[TBD: Correlate the image references with Figure numbers]</em></p>
+    <p><em>[TBD: Transcriptions are under two conventions, unify them to a single convention.]</em></p>
     <dl class="ref">
       <dt>Ludolf, 1681</dt>
       <dd>
@@ -2126,25 +2126,33 @@
       <dd>
         <p><a href="#justification_word_bound"></a></p>
         <p><em>Transcribed Citation:</em><br/>
-        <span style="margin-left:2em;"> <cite>YeOgrafi LeEthiopia Lijoch Tiqim</cite>, O. Erikson. Page 35. Swedish Mission, 1921 (1913 EC). Asmara.</span></p>
+        <span style="margin-left:2em;"><cite>YeOgrafi LeEthiopia Lijoch Tiqim</cite>, O. Erikson. Page 35. Swedish Mission, 1921 (1913 EC). Asmara.</span></p>
         <p><em>Source Citation:</em><br/>
-        <span style="margin-left:2em;" lang="am"> <cite>የኦግራፊ። ለኢትዮጵያ፡ልጆች፡ጥቅም</cite>፣ ኤሪክሶን። ገጽ ፴፭። የሚስዮንግ፡ስዌዱኣማህተም፡ታተመች፣ ፲፱፻፲፫። አስመራ።</span></p>
+        <span style="margin-left:2em;" lang="am"><cite>የኦግራፊ። ለኢትዮጵያ፡ልጆች፡ጥቅም</cite>፣ ኤሪክሶን። ገጽ ፴፭። የሚስዮንግ፡ስዌዱኣማህተም፡ታተመች፣ ፲፱፻፲፫። አስመራ።</span></p>
+      </dd>
+      <dt>Ethiopiawi, 1944</dt>
+      <dd>
+        <p><a href="#zeneb_ethiopia_metsehafe_chewata_sigawi_page_39"></a></p>
+        <p><em>Transcribed Citation:</em><br/>
+        <span style="margin-left:2em;"><cite>Metsehafe Chewata Sigawi WeMenfesawi</cite>, Z. Ethiopiawi. Page 39. Merha Tibeb Publishers, 1952 (1944 EC). Addis Ababa.</span></p>
+        <p><em>Source Citation:</em><br/>
+        <span style="margin-left:2em;" lang="am"><cite>መጽሐፈ፡ጨዋታ።፡ሥጋዊ፡ወመንፈሳዊ።</cite> ዘነብ፡ኢትዮጵያዊ። ገጽ ፴፱። መርሐ፡ጥበብ፡ማተሚያ፡ቤት፣ ፲፱፻፵፬። አዲስ፡አበባ።</span></p>
       </dd>
       <dt>Gubenya, 1973</dt>
       <dd>
         <p><a href="#fig_justification_centered"></a></p>
         <p><em>Transcribed Citation:</em><br/>
-        <span style="margin-left:2em;"> <cite>Alweledem</cite>, A. Gubenya. Page 87. Brana Publisher,  1973 (1966 EC). Addis Ababa.</span></p>
+        <span style="margin-left:2em;"><cite>Alweledem</cite>, A. Gubenya. Page 87. Brana Publisher,  1973 (1966 EC). Addis Ababa.</span></p>
         <p><em>Source Citation:</em><br/>
-        <span style="margin-left:2em;" lang="am"> <cite>አልወለደም</cite>፣ አቤ ጉበኛ። ገጽ ፹፯። ብራና ማተሚያ ደርጅት ታተመ፣ ፲፱፻፷፮። አዲስ አበባ።</span></p>
+        <span style="margin-left:2em;" lang="am"><cite>አልወለደም</cite>፣ አቤ ጉበኛ። ገጽ ፹፯። ብራና ማተሚያ ደርጅት ታተመ፣ ፲፱፻፷፮። አዲስ አበባ።</span></p>
       </dd>
       <dt>Itedalewe, 1987</dt>
       <dd>
         <p><a href="#nebiy_mohammed_page_35"></a></p>
         <p><em>Transcribed Citation:</em><br/>
-        <span style="margin-left:2em;"> <cite>Ḥaṣir Tarix Nebiy Muḥamed</cite>, J.H.A. Itedalewe. Page 35. Selam Printing House, 1987 (1979 EC). Asmara.</span></p>
+        <span style="margin-left:2em;"><cite>Ḥaṣir Tarix Nebiy Muḥamed</cite>, J.H.A. Itedalewe. Page 35. Selam Printing House, 1987 (1979 EC). Asmara.</span></p>
         <p><em>Source Citation:</em><br/>
-        <span style="margin-left:2em;" lang="ti"> <cite>ሐጺር ታሪኽ ነቢይ ሙሐመድ (ሰለላሁ ዓለይሂ ወሰለም) ብጅብሪል</cite>፣ ጅብሪል ሐጂ አቡበከር እተዳለወ። ገጽ 35። ቤት ማኅተም ሰላም፣ ፲፱፻፸፰። አሥመራ።</span></p>
+        <span style="margin-left:2em;" lang="ti"><cite>ሐጺር ታሪኽ ነቢይ ሙሐመድ (ሰለላሁ ዓለይሂ ወሰለም) ብጅብሪል</cite>፣ ጅብሪል ሐጂ አቡበከር እተዳለወ። ገጽ 35። ቤት ማኅተም ሰላም፣ ፲፱፻፸፰። አሥመራ።</span></p>
       </dd>
       <dt>Kifle, 1955</dt>
       <dd>
@@ -2152,17 +2160,33 @@
         <p><a href="#kwk_metsehafe_sewasew_page_159"></a></p>
         <p><a href="#kwk_metsehafe_sewasew_page_65"></a></p>
         <p><em>Transcribed Citation:</em><br/>
-        <span style="margin-left:2em;"> <cite>Maṣḥafa Sawāsew Wages Wamazgaba Qālāt Hadis</cite>, K. W. Kifle. Pages 65 &amp; 159. Artistic Printers, 1955 (1948 EC). Addis Ababa.</span></p>
+        <span style="margin-left:2em;"><cite>Maṣḥafa Sawāsew Wages Wamazgaba Qālāt Hadis</cite>, K. W. Kifle. Pages 65 &amp; 159. Artistic Printers, 1955 (1948 EC). Addis Ababa.</span></p>
         <p><em>Source Citation:</em><br/>
-        <span style="margin-left:2em;" lang="gez"> <cite>መጽሐፈ፡ሰዋስው፡ወግስ፡ወመዝገበ፡ቃላት፡ሐዲስ</cite>፣ ኪዳነ፡ወልድ፡ክፍሌ። ገጾች ፷፭ እና ፻፶፱። አርቲስቲክ፡ማተሚያ፡ቤት፣ ፲፱፻፵፰። አዲስ አበባ።</span></p>
+        <span style="margin-left:2em;" lang="gez"><cite>መጽሐፈ፡ሰዋስው፡ወግስ፡ወመዝገበ፡ቃላት፡ሐዲስ</cite>፣ ኪዳነ፡ወልድ፡ክፍሌ። ገጾች ፷፭ እና ፻፶፱። አርቲስቲክ፡ማተሚያ፡ቤት፣ ፲፱፻፵፰። አዲስ አበባ።</span></p>
       </dd>
-      <dt>Weldemariam, 1995</dt>
+      <dt>Ngongo, 1995</dt>
+      <dd>
+        <p><a href="#paulos_ngongo_atsie_menilik_page_113"></a></p>
+        <p><em>Transcribed Citation:</em><br/>
+        <span style="margin-left:2em;"><cite>Atse Menilik</cite>, P. Ngongo. Page 113. Bole Printers, 1992 (1984 EC). Addis Ababa.</span></p>
+        <p><em>Source Citation:</em><br/>
+        <span style="margin-left:2em;" lang="am"><cite>አጤ ምኒልክ</cite>፣ ጳውሎስ ኞኞ። ገጽ 113። ቦሌ ማተሚያ ቤት፣ የካቲት 1984። አዲስ አበባ።</span></p>
+      </dd>
+      <dt>Woldemariam, 1995</dt>
       <dd>
         <p><a href="#ecclesiastical_emphasis_sample"></a></p>
         <p><em>Transcribed Citation:</em><br/>
-        <span style="margin-left:2em;"> <cite>Maṣḥafa Ṣalot Mes Ser’ate Kiddase Betegreññā</cite>, B. Weldemariam. Page 32. Mahbere Haawaryat F-Ha Bet Mahtem Tehatmet, 1995 (1988 EC). Asmera.</span></p>
+        <span style="margin-left:2em;"><cite>Maṣḥafa Ṣalot Mes Ser’ate Kiddase Betegreññā</cite>, B. Woldemariam. Page 32. Mahbere Haawaryat F-Ha Bet Mahtem Tehatmet, 1995 (1988 EC). Asmera.</span></p>
         <p><em>Source Citation:</em><br/>
-        <span style="margin-left:2em;" lang="gez"> <cite>መጽሐፈ ጸሎት ምስ ሥርዓተ ቅዳሴ ብትግርኛ</cite>፣ በርሀ ወልደማርያም። ገጽ ፴፪። ማኅበረ ሐዋርያት ፍ-ሃ ቤት ማኅተም ተኀትመት፣ ፲፱፻፹፰። አሥመራ።</span></p>
+        <span style="margin-left:2em;" lang="gez"><cite>መጽሐፈ ጸሎት ምስ ሥርዓተ ቅዳሴ ብትግርኛ</cite>፣ በርሀ ወልደማርያም። ገጽ ፴፪። ማኅበረ ሐዋርያት ፍ-ሃ ቤት ማኅተም ተኀትመት፣ ፲፱፻፹፰። አሥመራ።</span></p>
+      </dd>
+      <dt>Zewdie, 1995</dt>
+      <dd>
+        <p><a href="#mekonnen_zewdie_yemaychew_qwulegna_page_56"></a></p>
+        <p><em>Transcribed Citation:</em><br/>
+        <span style="margin-left:2em;"><cite>YeMaychew Qwuslegna</cite>, M. Zewdie. Page 56. Birhanena Selam Publishers, 1955 (1948 EC). Addis Ababa.</span></p>
+        <p><em>Source Citation:</em><br/>
+        <span style="margin-left:2em;" lang="gez"><cite>የማይጨው፡ቍሶለኛ።</cite> መኰንን፡ዘውዴ። ገጽ ፶፮። ብርሃንና፡ሰላም፡ማተሚያ፡ቤት፣ ትቅምት፡፳፫፡ቀን፡፲፱፻፵፰፡ዓ.ም.። አዲስ፡አበባ።</span></p>
       </dd>
     </dl>
   </section>
