Added table of examples to the Numbered Lists section.

--- a/index.html
+++ b/index.html
@@ -1066,11 +1066,33 @@
       <h4>Numbered Lists</h4>
       <p>Ethiopic literature will apply ordered numbered list using both Ethiopic and Western numeral systems. Ethiopic numeral
         lists are addressed in the <a href="https://www.w3.org/TR/css-counter-styles-3/#valdef-counter-style-name-ethiopic-numeric">Ethiopic Numeric Counter Style</a> section of the <a href="https://www.w3.org/TR/css-counter-styles-3/">CSS Counter Styles Level 3</a> specification.</p>
+      <table>
+        <tr>
+          <th colspan="4">Ethiopic Numeral Lists</th>
+        </tr>
+        <tr>
+          <td lang="am">፩፡ ...<br/>፪፡ ...<br/>፫፡ ...<br/>፬፡ ...</td>
+          <td lang="am">፩/ ...<br/>፪/ ...<br/>፫/ ...<br/>፬/ ...</td>
+          <td lang="am">፩) ...<br/>፪) ...<br/>፫) ...<br/>፬) ...</td>
+          <td lang="am">፩. ...<br/>፪. ...<br/>፫. ...<br/>፬. ...</td>
+          <td lang="am">፩፦ ...<br/>፪፦ ...<br/>፫፦ ...<br/>፬፦ ...</td>
+        </tr>
+        <tr>
+          <th colspan="4">Western Numeral Lists</th>
+        </tr>
+        <tr>
+          <td lang="am">1፡ ...<br/>2፡ ...<br/>3፡ ...<br/>4፡ ...</td>
+          <td>1/ ...<br/>2/ ...<br/>3/ ...<br/>4/ ...</td>
+          <td>1) ...<br/>2) ...<br/>3) ...<br/>4) ...</td>
+          <td>1. ...<br/>2. ...<br/>3. ...<br/>4. ...</td>
+          <td lang="am">1፦ ...<br/>2፦ ...<br/>3፦ ...<br/>4፦ ...</td>
+        </tr>
+      </table>
       <div class="issues">
         <p>Issues/Questions:</p>
         <ol>
-          <li>What is the counter suffix preference with Ethiopic numbers?</li>
-          <li>What is the counter suffix preference with western numbers?</li>
+          <li>What is the counter suffix preference with Ethiopic numbers? Does it depend on language?</li>
+          <li>What is the counter suffix preference with Western numbers? Does it depend on language?</li>
           <li>Are there any sublist (nested list) considerations?</li>
         </ol>
       </div>
