Completion of usage explanations in the Ethiopic punctuation table. Typo fix in the references section.

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
               Tigrinya: <br/>
               English: Ethiopic Section Mark<br/>
           </td>
-          <td><em>TBD</em></td>
+          <td>Used to divide sections or subsections; generally three or more used together on a line of their own.</td>
         </tr>
         <tr>
           <td style="text-align: center;">፨</td>
@@ -326,7 +326,7 @@
               Tigrinya: <br/>
               English: Ethiopic Paragraph Separator<br/><span style="color: #ffffff">English: </span>Ethiopic Seven Dot Section Mark
           </td>
-          <td><em>TBD</em></td>
+          <td>May be used to conclude the final paragraph of a section in lieu of Ethiopic Full Stop. May also be used under the same rules given for Ethiopic Section Mark.</td>
         </tr>
       </tbody>
     </table>
@@ -414,8 +414,8 @@
           <li>What symbols benefit from shape change?</li>
           <li>What symbols benefit from weight change?</li>
           <li>Noteworthy for layout correction is that an isolated left double guillemet, », is common in tabular text to indicate that the entry above is to be duplicated. This is a use case
-              where the left double guillemet is not required to be balanced by a right double guillemet.</li>
-          <li>Are square "dots" in punctuation preferable over circular?</li>
+              where the left double guillemet is not required to be balanced by a right double guillemet (“ትእምርተ፡ደጊመ፡ቃል፡” context).</li>
+          <li>Are square “dots” in punctuation preferable over circular?</li>
         </ol>
       </div>
     </section>
@@ -2158,7 +2158,7 @@
         <p><em>Transcribed Citation:</em><br/>
         <span style="margin-left:2em;"><cite>YeOgrafi LeEthiopia Lijoch Tiqim</cite>, O. Erikson. Page 35. Swedish Mission, 1921 (1913 EC). Asmara.</span></p>
         <p><em>Source Citation:</em><br/>
-        <span style="margin-left:2em;" lang="am"><cite>የኦግራፊ። ለኢትዮጵያ፡ልጆች፡ጥቅም</cite>፣ ኤሪክሶን። ገጽ ፴፭። የሚስዮንግ፡ስዌዱኣማህተም፡ታተመች፣ ፲፱፻፲፫። አስመራ።</span></p>
+        <span style="margin-left:2em;" lang="am"><cite>የኦግራፊ። ለኢትዮጵያ፡ልጆች፡ጥቅም</cite>፣ ኤሪክሶን። ገጽ ፴፭። የሚስዮንግ፡ስዌዱኣ፡ማኅተም፡ታተመች፣ ፲፱፻፲፫። አስመራ።</span></p>
       </dd>
       <dt>Ethiopiawi, 1944</dt>
       <dd>
